@@ -3338,16 +3338,21 @@ s32 SEQ_UI_LED_Handler_Periodic()
   u8 beat_led_on = sequencer_running && ((seq_core_state.ref_step % 4) == 0);
   SEQ_LED_PinSet(seq_hwcfg_led.beat, beat_led_on);
 
-  // mirror to status LED (inverted, so that LED is normaly on)
-  MIOS32_BOARD_LED_Set(0xffffffff, beat_led_on ? 0 : 1);
+  // mirror to green status LED (inverted, so that LED is normaly on)
+  MIOS32_BOARD_LED_Set(0x00000001, beat_led_on ? 0 : 1);
 
   // measure LED
   u8 measure_led_on = sequencer_running && ((seq_core_state.ref_step % (seq_core_steps_per_measure+1)) == 0);
   SEQ_LED_PinSet(seq_hwcfg_led.measure, measure_led_on);
 
+  // mirror to red status LED
+  MIOS32_BOARD_LED_Set(0x00000002, measure_led_on ? 2 : 0);
+
   // MIDI IN/OUT LEDs
   SEQ_LED_PinSet(seq_hwcfg_led.midi_in_combined, seq_midi_port_in_combined_ctr);
+  MIOS32_BOARD_LED_Set(0x00000004, seq_midi_port_in_combined_ctr ? 4 : 0);
   SEQ_LED_PinSet(seq_hwcfg_led.midi_out_combined, seq_midi_port_out_combined_ctr);  
+  MIOS32_BOARD_LED_Set(0x00000008, seq_midi_port_out_combined_ctr ? 8 : 0);
 
   // don't continue if no new step has been generated and GP LEDs haven't changed
   if( !seq_core_step_update_req && prev_ui_gp_leds == ui_gp_leds && sequencer_running ) // sequencer running check: workaround - as long as sequencer not running, we won't get an step update request!
